yamls/backup-from-master/hello.yml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    app: nginx

spec:
  containers:
  - name: hello-world
    image:  tutum/hello-world
