yamls/backup-from-master/hello-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  ports:
  - name: hello
    port: 80
  selector:
    app: mypod
