yamls/backup-from-master/ims-spring-svc.yml
apiVersion: v1
kind: Service 
metadata:
  name: springapp
spec:
  type: NodePort
  selector:
    app: ims-spring
  ports:
  - port: 8090
    targetPort: 8090
    nodePort: 31090
