yamls/backup-from-master/mysql-svc.yml
apiVersion: v1
kind: Service 
metadata:
  name: imsdb
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
