yamls/backup-from-master/statefulset-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
  - name: nginx
    port: 80
  clusterIP: None
  selector:
    app: nginx
