yamls/backup-from-master/ingress-rc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  annotations:
    kubernetes.io/ingress.class: ingress-nginx
spec:
  rules:
  - host: host1.domain.ext
    http:
      paths:
      - pathType: Prefix
        path: / 
        backend:
          service:
            name: "nginx"
            port:
              number: 80
